Bug #45613 handle failures from my_hash_insert
Submitted: 19 Jun 2009 12:16 Modified: 12 Mar 2010 17:39
Reporter: Narayanan venkateswaran Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0, 5.1, 6.0 bzr OS:Any
Assigned to: Kristofer Pettersson Target Version:5.1+
Triage: Triaged: D2 (Serious)

[19 Jun 2009 12:16] Narayanan venkateswaran
Description:
Calls to my_hash_insert ignore the return value.This call can fail and the
callers must deal with that.

How to repeat:
By code inspection.

Suggested fix:
The return values should be checked.
[19 Jun 2009 12:19] Narayanan venkateswaran
Pls see Bug#43572 for a related issue
[20 Jun 2009 6:10] Sveta Smirnova
Thank you for the report.

Verified as described.
[16 Nov 2009 13:20] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/90503

3187 Kristofer Pettersson	2009-11-16
      Bug#45613 handle failures from my_hash_insert
      
      Not all my_hash_insert() calls are checked for return value.
      
      This patch adds appropriate checks and failure responses
      where needed.
     @ mysys/hash.c
        * Debug hook for testing failures in my_hash_insert()
[19 Nov 2009 13:48] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/90964

3187 Kristofer Pettersson	2009-11-19
      Bug#45613 handle failures from my_hash_insert
      
      Not all my_hash_insert() calls are checked for return value.
      
      This patch adds appropriate checks and failure responses
      where needed.
     @ mysys/hash.c
        * Debug hook for testing failures in my_hash_insert()
[20 Nov 2009 14:52] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/91111

3187 Kristofer Pettersson	2009-11-20
      Bug#45613 handle failures from my_hash_insert
           
      Not all my_hash_insert() calls are checked for return value.
           
      This patch adds appropriate checks and failure responses
      where needed.
     @ mysys/hash.c
        * Debug hook for testing failures in my_hash_insert()
[20 Nov 2009 15:19] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/91116

3187 Kristofer Pettersson	2009-11-20
      Bug#45613 handle failures from my_hash_insert
      
      Not all my_hash_insert() calls are checked for return value.
      
      This patch adds appropriate checks and failure responses
      where needed.
     @ mysys/hash.c
        * Debug hook for testing failures in my_hash_insert()
[23 Nov 2009 10:52] Georgi Kodinov
Reopened due to failures in the regression tests. Need to consider some more things.
[23 Nov 2009 15:32] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/91317

3217 Georgi Kodinov	2009-11-23
      Additional fix for bug #45613: handle failures from my_hash_insert
      
      Testing for presence of stuff in a hash inside the function
      that's filling in the hash creates chicken-and-egg type of problems.
      This results in test suite failures in mysql-pe in debug mode and 
      adds bad initialization dependency in 5.1.
      Fixed by removing the debug code.
[2 Dec 2009 8:05] Bugs System
Pushed into 5.1.42 (revid:joro@sun.com-20091202080033-mndu4sxwx19lz2zs) (version source
revid:davi.arnaut@sun.com-20091125130912-d7hrln14ef7y5d7i) (merge vers: 5.1.42) (pib:13)
[16 Dec 2009 2:02] Paul DuBois
Noted in 5.1.42 changelog.

The return value was not checked for some my_hash_insert() calls.

Setting report to NDI pending push to 5.5.x+.
[16 Dec 2009 8:38] Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091216083311-xorsasf5kopjxshf) (version
source revid:alik@sun.com-20091214191830-wznm8245ku8xo702) (merge vers: 6.0.14-alpha)
(pib:14)
[16 Dec 2009 8:45] Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091216082430-s0gtzibcgkv4pqul) (version
source revid:alexey.kopytov@sun.com-20091124083136-iqm136jm31sfdwg3) (merge vers:
5.5.0-beta) (pib:14)
[16 Dec 2009 8:51] Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20091216083231-rp8ecpnvkkbhtb27) (version
source revid:alik@sun.com-20091212203859-fx4rx5uab47wwuzd) (merge vers: 5.6.0-beta)
(pib:14)
[16 Dec 2009 16:13] Paul DuBois
Noted in 5.5.1, 6.0.14 changelogs.
[12 Mar 2010 14:11] Bugs System
Pushed into 5.1.44-ndb-7.0.14 (revid:jonas@mysql.com-20100312135944-t0z8s1da2orvl66x)
(version source revid:jonas@mysql.com-20100312115609-woou0te4a6s4ae9y) (merge vers:
5.1.44-ndb-7.0.14) (pib:16)
[12 Mar 2010 14:27] Bugs System
Pushed into 5.1.44-ndb-6.2.19 (revid:jonas@mysql.com-20100312134846-tuqhd9w3tv4xgl3d)
(version source revid:jonas@mysql.com-20100312060623-mx6407w2vx76h3by) (merge vers:
5.1.44-ndb-6.2.19) (pib:16)
[12 Mar 2010 14:42] Bugs System
Pushed into 5.1.44-ndb-6.3.33 (revid:jonas@mysql.com-20100312135724-xcw8vw2lu3mijrhn)
(version source revid:jonas@mysql.com-20100312103652-snkltsd197l7q2yg) (merge vers:
5.1.44-ndb-6.3.33) (pib:16)